[package]
name = "loudnessnorm"
description = """
The loudness of the samples are normalized by calculating the **RMS** then the gain is changed to
bring the average amplitude of the source signal to a target level (by default `0 dBFS`).
"""
version = "1.3.2"
readme = "README.md"
homepage = "https://github.com/nullvideo/loudnessnorm"
authors = ["nullvideo <bsantanu381@gmail.com>"]
license = "ISC"
edition = "2018"
exclude = ["target/**/*", "*.lock", "*.yml"]


[dependencies]
hound = "3.4.0"
structopt = "0.3"