[package]
name = "loudnessnorm"
version = "1.3.2"
readme = "README.cr.md"
homepage = "https://github.com/nullvideo/loudnessnorm"
authors = ["nullvideo <bsantanu381@gmail.com>"]
categories = ["multimedia", "multimedia::audio"]
keywords = ["rms", "audio", "normalization", "dsp", "signal"]
license = "ISC"
edition = "2018"
exclude = ["target/**/*", "*.lock", "*.yml"]


[dependencies]
hound = "3.4.0"
clap = "2.33.0"